# todo-entries-starlette

./: README.md  alembic.ini  pyproject.toml  requirements.txt
src/app/: README.md  api.py  entities.py  usecases.py  value_objects.py
src/app/apischema/: encoder.py  schema.py  validator.py
src/app/persistence/: database.py  models.py  repository.py
src/app/persistence/mapper/: interfaces.py  memory.py  sqlite.py
src/app/persistence/migrations/: env.py
src/app/persistence/migrations/versions/: a1fd7b48c40f_001_initial.py
src/app/tests/apischema/: test_encoder.py  test_validator.py
src/app/tests/persistence/: test_repository.py
src/app/tests/usecases/: test_todo_entry.py  test_todo_label.py
